# polymarket-copy-trading-bot-v2.0

./: .gitignore  README.md  audit_algorithm.sh  pyproject.toml
docs/: COMMAND_REFERENCE.md  EXAMPLES.md  GETTING_STARTED.md  README.md
src/scripts/simulation/: aggregate_results.py  audit_copy_trading.py  compare_results.py  fetch_historical_trades.py  simulate_profitability_old.py
src/services/: trade_monitor.py
src/utils/: logger.py  paths.py
