[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-copy-trading-bot"
version = "2.0.0"
description = "Professional Polymarket bot, Polymarket trading bot, and Polymarket copy trading bot - Automated copy trading for Polymarket that mirrors trades from top performers with intelligent position sizing and real-time execution"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Dexoryn Labs", email = "dexoryn@dexorynlabs.com"}
]
maintainers = [
    {name = "Dexoryn Labs", email = "dexoryn@dexorynlabs.com"}
]
license = {text = "ISC"}
keywords = [
    "polymarket bot",
    "polymarket trading bot",
    "polymarket copy trading bot",
    "polymarket",
    "polymarket automation",
    "polymarket copy trading",
    "polymarket trading",
    "polymarket prediction markets",
    "trading bot",
    "copy trading",
    "copy trading bot",
    "automated trading",
    "defi",
    "defi trading",
    "prediction markets",
    "polygon",
    "polygon trading",
    "automated polymarket",
    "polymarket defi bot"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
project-urls = {
    "Homepage" = "https://github.com/dexorynLabs/polymarket-copy-trading-bot-v2.0",
    "Documentation" = "https://github.com/dexorynLabs/polymarket-copy-trading-bot-v2.0#readme",
    "Repository" = "https://github.com/dexorynLabs/polymarket-copy-trading-bot-v2.0",
    "Issues" = "https://github.com/dexorynLabs/polymarket-copy-trading-bot-v2.0/issues",
    "Support" = "https://t.me/dexoryn_here",
    "Twitter" = "https://twitter.com/dexoryn",
}
dependencies = [
    "python-dotenv>=1.0.0",
    "pymongo>=4.6.0",
    "web3>=6.11.0",
    "httpx>=0.25.0",
    "websockets>=12.0",
    "rich>=13.7.0",
    "colorama>=0.4.6",
    "python-dateutil>=2.8.2",
    "eth-account>=0.9.0",
    "eth-utils>=2.3.0",
]

[project.scripts]
polymarket-bot = "src.main:main"

